# ai_lot

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  ARCHITECTURE_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  README.md  UI_UX_OPTIMIZATION_PLAN.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_hash.rs
src-tauri/migrations/: 0002_update_admin_user_pwd.sql  001_initial_schema.sql  003_performance_optimization.sql  004_add_exchange_configs.sql  20251231_create_audit_logs.sql  20260101_create_risk_rules.sql  20260110_add_performance_indexes.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audit.rs  backtest.rs  backup.rs  cache.rs  config.rs  emergency.rs  exchange.rs  market.rs  mod.rs  risk.rs  strategy.rs  strategy_debug.rs  strategy_engine.rs  strategy_instance.rs  strategy_test.rs  trade.rs  user.rs
src-tauri/src/core/: error.rs  event.rs  mod.rs  response.rs  validation.rs
src-tauri/src/core/auth/: jwt.rs  mod.rs  permission.rs
src-tauri/src/core/risk/: consecutive_loss.rs  daily_loss.rs  (+6 more)
src-tauri/src/infrastructure/: audit.rs  cache.rs  config.rs  crypto.rs  database.rs  logging.rs  mod.rs
src-tauri/src/models/: exchange.rs  mod.rs  risk_alert.rs  strategy.rs  strategy_instance.rs  user.rs
src-tauri/src/repository/: exchange_repo.rs  mod.rs  risk_alert_repo.rs  risk_rule_repo.rs  strategy_instance_repo.rs  strategy_repo.rs  user_repo.rs
src-tauri/src/services/: backtest_service.rs  backup_service.rs  data_quality.rs  emergency_service.rs  market_service.rs  mod.rs  optimizer.rs  trade_service.rs
src-tauri/src/test_helpers/: mock_notifier.rs  mod.rs  test_data.rs
src-tauri/src/types/: backtest.rs  mod.rs
src-tauri/tests/: bybit_integration_test.rs  okx_integration_test.rs  phase1_risk_test.rs  phase2_event_integration_test.rs  risk_integration_test.rs  test_binance_api.rs  test_binance_websocket.rs
(+142 files in other folders)
