[package]
name = "ai-lot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_lot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
argon2 = "0.5"
aes-gcm = "0.10"
# HMAC-SHA256 for Binance API signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
# Tracing for structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
rquickjs = { version = "0.9", features = ["array-buffer", "parallel"] }
lettre = "0.11"
flate2 = "1.0"
# Async caching with moka
moka = { version = "0.12", features = ["future"] }
lazy_static = "1.5"
toml = "0.8"
rand = "0.8"
regex = "1"
# JWT authentication
jsonwebtoken = "9"

[dev-dependencies]
tempfile = "3"

# sqlx 编译时检查 (可选，需要 SQLX_OFFLINE=true)
# [sqlx]
# database_url = "sqlite:ai-lot.db"

